--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   },
   "devDependencies": {
     "@quasar/app": "^1.9.6",
+    "devtron": "^1.4.0",
+    "electron": "^9.0.5",
+    "electron-debug": "^3.1.0",
+    "electron-devtools-installer": "^3.1.0",
+    "electron-packager": "^15.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
     "strip-ansi": "=3.0.1"
